Changed notifications and messages

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -42,6 +42,10 @@
   </div>
 </div>
 
+<div id="success-message">
+  <p-messages [(value)]="lowerLeftNotification"></p-messages>
+</div>
+
 <!-- sidebar -->
 <div class="ui-g ui-fuid">
 
