--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -54,5 +54,11 @@ input {
   background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
 
+#success-message {
+  margin-bottom: 1px;
+  margin-left: 69%;
+  position: relative;
+  bottom: 0;
+}
 
 
