--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,30 @@
 <div class="ui-g-12 ui-md-4 ui-md-offset-4" style="margin-top: 100px;">
-  <p-panel header="Please Login">
-    <form [formGroup]="loginForm" (ngSubmit)="callLogin()" >
+  <p-panel header="Login">
+    <form [formGroup]="loginForm" (ngSubmit)="login()" >
       <span class="ui-float-label">
         <input
           id="username-field"
           type="text"
           placeholder="Username"
           pInputText
-          class="width100"
+          class="login-form-input"
           formControlName="username"
-          (keyup.enter)="onPasswordEnter()" />
+          (keyup.enter)="login()" />
       </span>
       <span class="ui-float-label">
         <input
           id="password-field"
           type="password"
           placeholder="Password"
-          class="width100"
+          class="login-form-input"
           pInputText
           formControlName="password"
-          (keyup.enter)="onPasswordEnter()" />
+          (keyup.enter)="login()" />
       </span>
       <button
         pButton
         type="button"
-        class="width100"
+        class="login-form-input"
         label="Login"
         (click)="onClick()"></button>
     </form>
