--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -61,4 +61,14 @@ input {
   bottom: 0;
 }
 
+.float-container {
+  border: 3px solid #fff;
+  padding: 20px;
+}
 
+.float-child {
+  width: 25%;
+  float: left;
+  padding: 20px;
+  border: 2px solid rgb(0, 0, 0);
+}  
