--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,5 +2,9 @@
   <ul>
     <li><a class="logo">DevTest</a></li>
     <li><a [routerLink]="'/login'">Logout</a></li>
+    <li><a (click)="confirmAction('Link # FOUR')">Link # four</a></li>
+    <li><a (click)="confirmAction('Link # THREE')">Link # three</a></li>
+    <li><a (click)="confirmAction('Link # TWO')">Link # two</a></li>
+    <li><a (click)="confirmAction('Link # ONE')">Link # one</a></li>
   </ul>
 </div>
